# mpx

./: .gitignore  Cargo.toml  README.md
.github/pages/: generate_report.py
.github/workflows/: ci.yml  initialize-project-structure.yml  pages.yml
.mdix/: .manifest.mdix
.mdix/project_structure/: project_structure.mdix
benches/: compare.rs
docs/: benchmarks.md  format-spec.md
scripts/: bench_corpus.sh  gen_corpus.sh  verify_corpus.sh
src/: decode.rs  encode.rs  filter.rs  header.rs  lib.rs  main.rs
tests/: roundtrip.rs
